fix menu on mobile

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -1423,6 +1423,30 @@ footer {
                     background: url(/img/ramona_desktop.png) center center no-repeat;
                     background-size: 100%;
                 }
+                &.red {
+                    background: url(/img/tudo_sobre_tmj.png) center center no-repeat;
+                    background-size: 100%;
+
+                }
+                &.orange {
+                    background: url(/img/remix.png) center center no-repeat;
+                    background-size: 100%;
+
+                }
+                &.yellow {
+                    background: url(/img/feito_por_voce.png) center center no-repeat;
+                    background-size: 100%;
+
+                }
+                &.pink {
+                    background: url(/img/denise.png) center center no-repeat;
+                    background-size: 100%;
+
+                }
+                &.blue {
+                    background: url(/img/geek.png) center center no-repeat;
+                    background-size: 100%;
+                }
             }
         }
         .menu {
